# whisper-typer-ui

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: speckit.tasks.prompt.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/: performance-analysis.md
specs/001-cross-platform-dictation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cross-platform-dictation/checklists/: requirements.md
specs/001-cross-platform-dictation/contracts/: internal-api.md
specs/002-streaming-transcription/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-streaming-transcription/checklists/: requirements.md
specs/002-streaming-transcription/contracts/: internal-api.md
specs/003-cli-tool-installation/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cli-tool-installation/checklists/: requirements.md
src/: audio_recorder.py  cli.py  config.py  config_defaults.py  config_manager.py  daemon.py  hotkey_manager.py  process_lock.py  service_manager.py  streaming_session.py  text_inserter.py  transcriber.py  ui_overlay.py  utils.py  whisper-typer-ui.py
