[project]
name = "whisper-typer-ui"
version = "0.1.0"
description = "Cross-platform voice dictation desktop application"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0,<2.0.0",
    "pynput>=1.7.0,<2.0.0",
    "sounddevice>=0.4.0,<1.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "pillow>=11.3.0",
    "psutil>=5.9.0,<6.0.0",
]

[project.scripts]
whisper-typer = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/assets/*.png",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
